--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,230 +1,295 @@
 .main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-}
-
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.description p {
   position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
+  margin: 0 auto;
+  width: 390px;
+  height: inherit;
+  background-color: var(--bg-color);
+  overflow: hidden;
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-  text-wrap: balance;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: "";
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
+  & .bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
     width: 100%;
+
+    & .inner {
+      position: relative;
+      overflow: hidden;
+      background: radial-gradient(57.12% 57.12% at 50% 50%, #00c4ff 0%, #007aff 100%);
+      width: 100%;
+      aspect-ratio: 3.9 / 2.6;
+
+      &::before {
+        position: absolute;
+        z-index: 1;
+        content: '';
+        background-color: var(--bg-color);
+        border-radius: 40px 0 0 0;
+        width: 100%;
+        height: 85px;
+        bottom: 0;
+        left: 0;
+        right: 0;
+      }
+    }
+
+    & .circle1,
+    .circle2 {
+      position: absolute;
+      border-radius: 50%;
+    }
+
+    & .circle1 {
+      width: 191px;
+      height: 191px;
+
+      left: 25px;
+      top: -137px;
+
+      background: radial-gradient(
+          108.51% 108.51% at 41.67% 2.54%,
+          rgba(140, 0, 255, 0) 0%,
+          rgba(140, 0, 255, 0.732414) 51.92%,
+          #0048ff 78.38%,
+          #00fffb 100%
+        ),
+        #007aff;
+
+      transform: matrix(-0.97, -0.26, -0.26, 0.97, 0, 0);
+    }
+
+    & .circle2 {
+      width: 197px;
+      height: 197px;
+
+      right: -34px;
+      top: 53px;
+
+      background: radial-gradient(
+          108.51% 108.51% at 41.67% 2.54%,
+          rgba(140, 0, 255, 0) 0%,
+          rgba(140, 0, 255, 0.732414) 51.92%,
+          #007aff 78.38%,
+          #00fffb 100%
+        ),
+        #007aff;
+      transform: rotate(135deg);
+    }
   }
 
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
+  & .cards {
+    width: max-content;
+    position: relative;
+    z-index: 2;
+
+    & .inner {
+      display: flex;
+      padding-left: 10px;
+      padding-right: 10px;
+      padding-top: 22px;
+      padding-bottom: 12px;
+      gap: 10px;
+      overflow-x: auto;
+
+      &::-webkit-scrollbar {
+        width: 0;
+      }
+    }
+
+    & .card {
+      position: relative;
+      display: block;
+      width: 230px;
+      height: 150px;
+      overflow: hidden;
+
+      color: var(--color-white);
+      background: radial-gradient(93% 93% at 67.83% 64.67%, rgba(140, 0, 255, 0.7) 0%, rgba(0, 122, 255, 0) 100%),
+        #007aff;
+      /* box-shadow: 0px 12px 120px rgba(0, 122, 255, 0.12); */
+      border-radius: 20px;
+      flex-grow: 1;
+
+      & .circle1,
+      .circle2,
+      .circle3 {
+        position: absolute;
+        border-radius: 50%;
+      }
+
+      &.card1 {
+        & .extra {
+          background-color: var(--color-bledny-green);
+
+          & .text {
+            color: var(--color-green);
+          }
+        }
+
+        & .circle1 {
+          width: 129px;
+          height: 129px;
+          left: -39px;
+          top: -86px;
+
+          background: radial-gradient(
+              127.68% 127.68% at 41.47% 116.66%,
+              #00fffb 0%,
+              #0048ff 51.92%,
+              rgba(140, 0, 255, 0.73) 78.38%,
+              #8c00ff 100%
+            ),
+            #007aff;
+        }
+
+        & .info {
+          & .title {
+            color: var(--color-bledny-blue);
+          }
+        }
+
+        & .circle2 {
+          width: 197px;
+          height: 197px;
+          left: -17px;
+          top: 88px;
+
+          background-image: url('../public/blue-card-circle-2.png');
+        }
+
+        & .circle3 {
+          width: 197px;
+          height: 197px;
+          left: 145px;
+          top: -52px;
+
+          background-image: url('../public/blue-card-circle-3.png');
+        }
+      }
+
+      &.card2 {
+        background: radial-gradient(93% 93% at 67.83% 64.67%, rgba(240, 96, 0, 0.7) 0%, rgba(255, 132, 0, 0) 100%),
+          #ff8400;
+        /* box-shadow: 0px 12px 120px rgba(255, 132, 0, 0.12); */
+
+        & .extra {
+          background-color: var(--color-bledny-orange);
+
+          & .text {
+            color: var(--color-orange);
+          }
+        }
+
+        & .circle1 {
+          width: 78px;
+          height: 78px;
+          right: 9px;
+          bottom: -46px;
+
+          background: radial-gradient(135.14% 135.14% at 37.24% -24.03%, #ff2f00 0%, #f96b27 37.5%, #ff2f00 100%)
+              /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
+            #f06000;
+        }
+
+        & .info {
+          & .title {
+            color: var(--color-bledny-orange);
+          }
+        }
+
+        & .circle2 {
+          width: 136px;
+          height: 136px;
+          left: -40px;
+          bottom: -77px;
+
+          background: radial-gradient(
+                91.23% 91.23% at 90.95% 12.7%,
+                #ffdfae 1.07%,
+                #ff9c32 35.72%,
+                rgba(255, 47, 0, 0.75) 62.11%,
+                rgba(255, 47, 0, 0) 100%
+              )
+              /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
+            #ff9c32;
+        }
+
+        & .circle3 {
+          width: 219px;
+          height: 219px;
+          left: 20px;
+          top: -111px;
+
+          background: radial-gradient(104.3% 104.3% at 12.42% 105.24%, #ffdfae 0%, #f06000 37.99%, #ff5900 100%)
+              /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
+            #f06000;
+        }
+      }
+
+      & .info {
+        position: relative;
+        height: inherit;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        padding: 15px;
+
+        & .check {
+          margin-top: 5px;
+          display: flex;
+          align-items: center;
+          gap: 5px;
+        }
+      }
+
+      & .extra {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        padding: 2px 4px;
+        border-radius: 5px;
+
+        & .text {
+          font-weight: 700;
+        }
+      }
+    }
   }
 
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
+  & .analytics {
+    padding-top: 30px;
+    position: relative;
     z-index: 1;
-  }
-}
+    background-color: var(--bg-color);
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
+    & .title {
+      text-align: center;
+    }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
+    & .month {
+      margin-top: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 7px;
+      padding: 6px 10px;
 
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
+      & .title {
+        color: var(--color-blue);
+      }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
+      & .btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: var(--color-bledny-blue);
+        padding: 4.5px 5.5px;
+        border-radius: 5px;
+      }
+    }
   }
 }
