--- a/app/globals.scss
+++ b/app/globals.scss
@@ -27,6 +27,7 @@ html {
 }
 
 body {
+  touch-action: none !important;
   font-size: 1.6rem;
   /* line-height: 1.35; */
   color: var(--color-dark);
