fix cards scroll

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,10 +1,11 @@
 .main {
   position: relative;
   margin: 0 auto;
-  // width: 390px;
+  padding-top: 25px;
+  width: 390px;
   height: inherit;
   background-color: var(--bg-color);
-  overflow-x: hidden;
+  // overflow-x: hidden;
 
   .bg {
     position: absolute;
@@ -80,21 +81,21 @@
   }
 
   .cards {
-    width: max-content;
     position: relative;
     z-index: 2;
     padding: 0 10px;
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+      width: 0;
+    }
 
     .inner {
       display: flex;
       padding-top: 22px;
       padding-bottom: 12px;
       gap: 10px;
-      overflow-x: scroll;
-
-      &::-webkit-scrollbar {
-        width: 0;
-      }
+      width: max-content;
     }
 
     .card {
@@ -104,7 +105,6 @@
       aspect-ratio: 2.3 / 1.5;
       overflow: hidden;
       border-radius: 20px;
-      flex-grow: 1;
       color: var(--color-white);
 
       .circle1,
