--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   margin: 0 auto;
   padding-top: 25px;
-  width: 390px;
+  // width: 390px;
   height: inherit;
   background-color: var(--bg-color);
   overflow-x: hidden;
