--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,340 +1,335 @@
-.main {
-  position: relative;
-  margin: 0 auto;
-  padding-top: 25px;
-  // width: 390px;
-  height: inherit;
-  background-color: var(--bg-color);
-  overflow-x: hidden;
+.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  overflow: hidden;
 
-  .bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
+  .bottom {
+    position: relative;
     overflow: hidden;
+    background: radial-gradient(57.12% 57.12% at 50% 50%, #00c4ff 0%, #007aff 100%);
+    width: 100%;
+    aspect-ratio: 3.9 / 2.6;
 
-    .bottom {
-      position: relative;
-      overflow: hidden;
-      background: radial-gradient(57.12% 57.12% at 50% 50%, #00c4ff 0%, #007aff 100%);
+    &::before {
+      position: absolute;
+      z-index: 1;
+      content: '';
+      background-color: var(--bg-color);
+      border-radius: 40px 0 0 0;
       width: 100%;
-      aspect-ratio: 3.9 / 2.6;
+      height: 85px;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+  }
 
-      &::before {
-        position: absolute;
-        z-index: 1;
-        content: '';
-        background-color: var(--bg-color);
-        border-radius: 40px 0 0 0;
-        width: 100%;
-        height: 85px;
-        bottom: 0;
-        left: 0;
-        right: 0;
+  .circle1,
+  .circle2 {
+    position: absolute;
+    border-radius: 50%;
+  }
+
+  .circle1 {
+    width: 191px;
+    height: 191px;
+
+    left: 25px;
+    top: -137px;
+
+    background: radial-gradient(
+        108.51% 108.51% at 41.67% 2.54%,
+        rgba(140, 0, 255, 0) 0%,
+        rgba(140, 0, 255, 0.732414) 51.92%,
+        #0048ff 78.38%,
+        #00fffb 100%
+      ),
+      #007aff;
+
+    transform: matrix(-0.97, -0.26, -0.26, 0.97, 0, 0);
+  }
+
+  .circle2 {
+    width: 197px;
+    height: 197px;
+
+    right: -34px;
+    top: 53px;
+
+    background: radial-gradient(
+        108.51% 108.51% at 41.67% 2.54%,
+        rgba(140, 0, 255, 0) 0%,
+        rgba(140, 0, 255, 0.732414) 51.92%,
+        #007aff 78.38%,
+        #00fffb 100%
+      ),
+      #007aff;
+    transform: rotate(135deg);
+  }
+}
+
+.slider {
+  position: relative;
+  z-index: 1;
+
+  .dots {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+
+    .dot {
+      width: 8px;
+      height: 8px;
+      background-color: var(--color-bledny-grey);
+      border-radius: 50%;
+
+      transition: all 0.1s ease;
+
+      &.active {
+        background-color: var(--color-blue);
       }
     }
+  }
+}
+
+.cards {
+  position: relative;
+  z-index: 2;
+  overflow: auto;
+
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+
+  .inner {
+    position: relative;
+    display: flex;
+    padding: 0 10px;
+    padding-top: 22px;
+    padding-bottom: 12px;
+    gap: 10px;
+
+    width: max-content;
+  }
+
+  .card {
+    position: relative;
+    display: block;
+    width: 230px;
+    aspect-ratio: 2.3 / 1.5;
+    overflow: hidden;
+    border-radius: 20px;
+    color: var(--color-white);
 
     .circle1,
-    .circle2 {
+    .circle2,
+    .circle3 {
       position: absolute;
       border-radius: 50%;
     }
 
-    .circle1 {
-      width: 191px;
-      height: 191px;
-
-      left: 25px;
-      top: -137px;
-
-      background: radial-gradient(
-          108.51% 108.51% at 41.67% 2.54%,
-          rgba(140, 0, 255, 0) 0%,
-          rgba(140, 0, 255, 0.732414) 51.92%,
-          #0048ff 78.38%,
-          #00fffb 100%
-        ),
+    &.card1 {
+      background: radial-gradient(93% 93% at 67.83% 64.67%, rgba(140, 0, 255, 0.7) 0%, rgba(0, 122, 255, 0) 100%),
         #007aff;
+      // box-shadow: 0px 12px 120px rgba(0, 122, 255, 0.12);
 
-      transform: matrix(-0.97, -0.26, -0.26, 0.97, 0, 0);
-    }
+      .extra {
+        background-color: var(--color-bledny-green);
 
-    .circle2 {
-      width: 197px;
-      height: 197px;
-
-      right: -34px;
-      top: 53px;
-
-      background: radial-gradient(
-          108.51% 108.51% at 41.67% 2.54%,
-          rgba(140, 0, 255, 0) 0%,
-          rgba(140, 0, 255, 0.732414) 51.92%,
-          #007aff 78.38%,
-          #00fffb 100%
-        ),
-        #007aff;
-      transform: rotate(135deg);
-    }
-  }
-
-  .cards {
-    position: relative;
-    z-index: 2;
-    overflow: auto;
-
-    &::-webkit-scrollbar {
-      width: 0;
-      height: 0;
-    }
-
-    .inner {
-      position: relative;
-      display: flex;
-      padding: 0 10px;
-      padding-top: 22px;
-      padding-bottom: 12px;
-      gap: 10px;
-
-      width: max-content;
-    }
-
-    .dots {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-
-      .dot {
-        width: 8px;
-        height: 8px;
-        background-color: var(--color-bledny-grey);
-        border-radius: 50%;
-
-        transition: all 0.1s ease;
-
-        &.active {
-          background-color: var(--color-blue);
+        .text {
+          color: var(--color-green);
         }
       }
-    }
 
-    .card {
-      position: relative;
-      display: block;
-      width: 230px;
-      aspect-ratio: 2.3 / 1.5;
-      overflow: hidden;
-      border-radius: 20px;
-      color: var(--color-white);
+      .circle1 {
+        width: 129px;
+        height: 129px;
+        left: -39px;
+        top: -86px;
 
-      .circle1,
-      .circle2,
-      .circle3 {
-        position: absolute;
-        border-radius: 50%;
-      }
-
-      &.card1 {
-        background: radial-gradient(93% 93% at 67.83% 64.67%, rgba(140, 0, 255, 0.7) 0%, rgba(0, 122, 255, 0) 100%),
+        background: radial-gradient(
+            127.68% 127.68% at 41.47% 116.66%,
+            #00fffb 0%,
+            #0048ff 51.92%,
+            rgba(140, 0, 255, 0.73) 78.38%,
+            #8c00ff 100%
+          ),
           #007aff;
-        // box-shadow: 0px 12px 120px rgba(0, 122, 255, 0.12);
-
-        .extra {
-          background-color: var(--color-bledny-green);
-
-          .text {
-            color: var(--color-green);
-          }
-        }
-
-        .circle1 {
-          width: 129px;
-          height: 129px;
-          left: -39px;
-          top: -86px;
-
-          background: radial-gradient(
-              127.68% 127.68% at 41.47% 116.66%,
-              #00fffb 0%,
-              #0048ff 51.92%,
-              rgba(140, 0, 255, 0.73) 78.38%,
-              #8c00ff 100%
-            ),
-            #007aff;
-        }
-
-        .info {
-          .title {
-            color: var(--color-bledny-blue);
-          }
-        }
-
-        .circle2 {
-          width: 197px;
-          height: 197px;
-          left: -17px;
-          top: 88px;
-
-          // background-image: url('../public/blue-card-circle-2.png');
-
-          background: radial-gradient(
-                118.81% 118.81% at 8.48% 84.53%,
-                rgba(140, 0, 255, 0) 0%,
-                rgba(140, 0, 255, 0.732414) 51.92%,
-                #00fffb 78.38%,
-                #00fffb 100%
-              )
-              /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
-            #007aff;
-        }
-
-        .circle3 {
-          width: 197px;
-          height: 197px;
-          left: 145px;
-          top: -52px;
-
-          // background-image: url('../public/blue-card-circle-3.png');
-
-          background: radial-gradient(
-                81.24% 81.24% at 97.1% 21.31%,
-                rgba(140, 0, 255, 0) 0%,
-                rgba(0, 122, 255, 0.732414) 51.92%,
-                #3ccbff 78.38%,
-                #00fffb 100%
-              )
-              /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
-            #007aff;
-        }
-      }
-
-      &.card2 {
-        background: radial-gradient(93% 93% at 67.83% 64.67%, rgba(240, 96, 0, 0.7) 0%, rgba(255, 132, 0, 0) 100%),
-          #ff8400;
-        /* box-shadow: 0px 12px 120px rgba(255, 132, 0, 0.12); */
-
-        .extra {
-          background-color: var(--color-bledny-orange);
-
-          .text {
-            color: var(--color-orange);
-          }
-        }
-
-        .circle1 {
-          width: 78px;
-          height: 78px;
-          right: 9px;
-          bottom: -46px;
-
-          background: radial-gradient(135.14% 135.14% at 37.24% -24.03%, #ff2f00 0%, #f96b27 37.5%, #ff2f00 100%)
-              /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
-            #f06000;
-        }
-
-        .info {
-          .title {
-            color: var(--color-bledny-orange);
-          }
-        }
-
-        .circle2 {
-          width: 136px;
-          height: 136px;
-          left: -40px;
-          bottom: -77px;
-
-          background: radial-gradient(
-                91.23% 91.23% at 90.95% 12.7%,
-                #ffdfae 1.07%,
-                #ff9c32 35.72%,
-                rgba(255, 47, 0, 0.75) 62.11%,
-                rgba(255, 47, 0, 0) 100%
-              )
-              /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
-            #ff9c32;
-        }
-
-        .circle3 {
-          width: 219px;
-          height: 219px;
-          left: 20px;
-          top: -111px;
-
-          background: radial-gradient(104.3% 104.3% at 12.42% 105.24%, #ffdfae 0%, #f06000 37.99%, #ff5900 100%)
-              /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
-            #f06000;
-        }
       }
 
       .info {
-        position: relative;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        padding: 15px;
-
-        .check {
-          margin-top: 5px;
-          display: flex;
-          align-items: center;
-          gap: 5px;
+        .title {
+          color: var(--color-bledny-blue);
         }
       }
 
+      .circle2 {
+        width: 197px;
+        height: 197px;
+        left: -17px;
+        top: 88px;
+
+        // background-image: url('../public/blue-card-circle-2.png');
+
+        background: radial-gradient(
+              118.81% 118.81% at 8.48% 84.53%,
+              rgba(140, 0, 255, 0) 0%,
+              rgba(140, 0, 255, 0.732414) 51.92%,
+              #00fffb 78.38%,
+              #00fffb 100%
+            )
+            /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
+          #007aff;
+      }
+
+      .circle3 {
+        width: 197px;
+        height: 197px;
+        left: 145px;
+        top: -52px;
+
+        // background-image: url('../public/blue-card-circle-3.png');
+
+        background: radial-gradient(
+              81.24% 81.24% at 97.1% 21.31%,
+              rgba(140, 0, 255, 0) 0%,
+              rgba(0, 122, 255, 0.732414) 51.92%,
+              #3ccbff 78.38%,
+              #00fffb 100%
+            )
+            /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
+          #007aff;
+      }
+    }
+
+    &.card2 {
+      background: radial-gradient(93% 93% at 67.83% 64.67%, rgba(240, 96, 0, 0.7) 0%, rgba(255, 132, 0, 0) 100%),
+        #ff8400;
+      /* box-shadow: 0px 12px 120px rgba(255, 132, 0, 0.12); */
+
       .extra {
-        position: absolute;
-        top: 15px;
-        right: 15px;
+        background-color: var(--color-bledny-orange);
+
+        .text {
+          color: var(--color-orange);
+        }
+      }
+
+      .circle1 {
+        width: 78px;
+        height: 78px;
+        right: 9px;
+        bottom: -46px;
+
+        background: radial-gradient(135.14% 135.14% at 37.24% -24.03%, #ff2f00 0%, #f96b27 37.5%, #ff2f00 100%)
+            /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
+          #f06000;
+      }
+
+      .info {
+        .title {
+          color: var(--color-bledny-orange);
+        }
+      }
+
+      .circle2 {
+        width: 136px;
+        height: 136px;
+        left: -40px;
+        bottom: -77px;
+
+        background: radial-gradient(
+              91.23% 91.23% at 90.95% 12.7%,
+              #ffdfae 1.07%,
+              #ff9c32 35.72%,
+              rgba(255, 47, 0, 0.75) 62.11%,
+              rgba(255, 47, 0, 0) 100%
+            )
+            /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
+          #ff9c32;
+      }
+
+      .circle3 {
+        width: 219px;
+        height: 219px;
+        left: 20px;
+        top: -111px;
+
+        background: radial-gradient(104.3% 104.3% at 12.42% 105.24%, #ffdfae 0%, #f06000 37.99%, #ff5900 100%)
+            /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
+          #f06000;
+      }
+    }
+
+    .info {
+      position: relative;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      padding: 15px;
+
+      .check {
+        margin-top: 5px;
         display: flex;
         align-items: center;
         gap: 5px;
-        padding: 2px 4px;
-        border-radius: 5px;
+      }
+    }
 
-        .text {
-          font-weight: 700;
-        }
+    .extra {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      padding: 2px 4px;
+      border-radius: 5px;
+
+      .text {
+        font-weight: 700;
       }
     }
   }
+}
 
-  .analytics {
-    padding: 0 10px;
-    padding-top: 30px;
-    padding-bottom: 100px;
+.analytics {
+  padding: 0 10px;
+  padding-top: 30px;
+  padding-bottom: 120px;
 
-    position: relative;
-    z-index: 1;
-    background-color: var(--bg-color);
+  position: relative;
+  z-index: 1;
+  background-color: var(--bg-color);
 
-    > .title {
-      text-align: center;
+  > .title {
+    text-align: center;
+  }
+
+  .month {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 7px;
+    padding: 6px 10px;
+
+    .title {
+      color: var(--color-blue);
     }
 
-    .month {
-      margin-top: 10px;
+    .btn {
       display: flex;
-      justify-content: center;
       align-items: center;
-      gap: 7px;
-      padding: 6px 10px;
-
-      .title {
-        color: var(--color-blue);
-      }
-
-      .btn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: var(--color-bledny-blue);
-        padding: 4.5px 5.5px;
-        border-radius: 5px;
-      }
+      justify-content: center;
+      background-color: var(--color-bledny-blue);
+      padding: 4.5px 5.5px;
+      border-radius: 5px;
     }
   }
 }
