--- a/components/Wrapper/Wrapper.module.scss
+++ b/components/Wrapper/Wrapper.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   margin: 0 auto;
   padding-top: 25px;
-  max-width: 390px;
+  // max-width: 390px;
   // width: 100%;
   height: inherit;
   background-color: var(--bg-color);
