--- a/app/globals.scss
+++ b/app/globals.scss
@@ -34,6 +34,10 @@ body {
   color: var(--color-dark);
   background-color: var(--color-white);
 
+  &.hidden {
+    overflow-y: hidden;
+  }
+
   &::-webkit-scrollbar {
     width: 0;
     height: 0;
@@ -41,9 +45,19 @@ body {
   }
 }
 
+h1 {
+  font-weight: 800;
+  font-size: 3.4rem;
+}
+
 h2 {
   font-weight: 800;
   font-size: 2.8rem;
+}
+
+h3 {
+  font-weight: 700;
+  font-size: 2rem;
 }
 
 h4 {
@@ -74,4 +88,10 @@ svg {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+button {
+  cursor: pointer;
+  color: inherit;
+  font-family: inherit;
 }
