--- a/components/Wrapper/Wrapper.module.scss
+++ b/components/Wrapper/Wrapper.module.scss
@@ -7,3 +7,142 @@
   height: inherit;
   background-color: var(--bg-color);
 }
+
+.popup {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
+  max-width: inherit;
+  background: rgba(61, 61, 81, 0.4);
+  margin: 0 auto;
+
+  .inner {
+    padding: 0 10px;
+    padding-top: 47px;
+    position: relative;
+    top: 7%;
+    height: 93%;
+    background-color: var(--bg-color);
+    border-radius: 20px 20px 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    animation: showUp 0.25s ease;
+
+    .tabs {
+      margin-top: 10px;
+      display: flex;
+      gap: 1px;
+      background-color: var(--color-white);
+      padding: 1px;
+      border-radius: 6px;
+
+      .tab {
+        padding: 6px 17.5px;
+        transition: all 0.1s ease;
+
+        &.income {
+          background-color: var(--color-blue);
+          color: var(--color-white);
+        }
+
+        &.expense {
+          background-color: var(--color-orange);
+          color: var(--color-white);
+        }
+
+        &:first-of-type {
+          border-radius: 5px 0 0 5px;
+        }
+
+        &:last-of-type {
+          border-radius: 0 5px 5px 0;
+        }
+      }
+    }
+
+    .sum {
+      margin-top: 30px;
+      display: flex;
+      gap: 5px;
+    }
+
+    .terminal {
+      margin-top: 30px;
+      width: 100%;
+      padding: 20px 4px;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr;
+
+      background-color: var(--color-white);
+      border-radius: 20px;
+
+      .btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        aspect-ratio: 118 / 55;
+        border-radius: 14px;
+
+        transition: all 0.15s ease-out;
+
+        &:active {
+          background-color: var(--bg-color);
+        }
+      }
+    }
+  }
+}
+
+.btns {
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+
+  .btn {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex: 1 0;
+    border-radius: 20px;
+
+    &.category {
+      background-color: var(--color-white);
+      padding: 8.5px 15px;
+      justify-content: space-between;
+
+      .icon {
+        border-radius: 15px;
+        overflow: hidden;
+        border: 1px solid var(--bg-color);
+        width: 45px;
+        height: 45px;
+      }
+    }
+
+    &.add {
+      background-color: var(--color-orange);
+      color: var(--color-white);
+      justify-content: center;
+      // padding: 20px 40px;
+      height: 100%;
+    }
+  }
+}
+
+@keyframes showUp {
+  from {
+    top: 100%;
+  }
+  to {
+    top: 7%;
+  }
+}
