--- a/app/globals.scss
+++ b/app/globals.scss
@@ -33,6 +33,7 @@ body {
   // line-height: 1.35;
   color: var(--color-dark);
   background-color: var(--color-white);
+  color: var(--color-dark);
 
   &.hidden {
     overflow-y: hidden;
