--- a/components/Wrapper/Wrapper.module.scss
+++ b/components/Wrapper/Wrapper.module.scss
@@ -134,6 +134,12 @@
       justify-content: center;
       // padding: 20px 40px;
       height: 100%;
+
+      transition: all 0.1s ease;
+
+      &.income {
+        background-color: var(--color-blue);
+      }
     }
   }
 }
