--- a/app/globals.scss
+++ b/app/globals.scss
@@ -32,8 +32,8 @@ body {
   font-size: 1.6rem;
   // line-height: 1.35;
   color: var(--color-dark);
-  background-color: var(--color-white);
-  color: var(--color-dark);
+  // background-color: var(--color-white);
+  background-color: var(--bg-color);
 
   &.hidden {
     overflow-y: hidden;
