--- a/app/globals.scss
+++ b/app/globals.scss
@@ -10,7 +10,8 @@
   --color-bledny-green: #daffe3;
   --color-orange: #ff8400;
   --color-bledny-orange: #ffeee4;
-  --color-tag-blue: #2c88ea;
+  --color-red: #ea2124;
+  --color-bledny-red: #ffe7e8;
 }
 
 * {
