--- a/app/profile/page.module.scss
+++ b/app/profile/page.module.scss
@@ -1,21 +1,21 @@
 .bg {
   position: absolute;
+  z-index: 0;
   top: 0;
   left: 0;
   right: 0;
   width: 100%;
+  background: radial-gradient(57.12% 57.12% at 50% 50%, #00c4ff 0%, #007aff 100%);
   overflow: hidden;
 
   .bottom {
     position: relative;
     overflow: hidden;
-    background: radial-gradient(57.12% 57.12% at 50% 50%, #00c4ff 0%, #007aff 100%);
     width: 100%;
     aspect-ratio: 3.9 / 2.6;
 
     &::before {
       position: absolute;
-      z-index: 1;
       content: '';
       background-color: var(--bg-color);
       border-radius: 40px 0 0 0;
@@ -156,9 +156,8 @@
 
   aspect-ratio: 3.7 / 2.16;
 
-  background: radial-gradient(67.82% 67.82% at 69.19% 41.44%, rgba(240, 96, 0, 0.7) 0%, rgba(255, 132, 0, 0) 100%),
-    #ff8400;
   border-radius: 20px;
+  overflow: hidden;
 
   > *:not(.bg) {
     position: relative;
@@ -166,6 +165,8 @@
 
   .bg {
     bottom: 0;
+    background: radial-gradient(67.82% 67.82% at 69.19% 41.44%, rgba(240, 96, 0, 0.7) 0%, rgba(255, 132, 0, 0) 100%),
+      #ff8400;
 
     .coin {
       position: absolute;
