--- a/app/globals.scss
+++ b/app/globals.scss
@@ -36,9 +36,9 @@ body {
   // background-color: var(--color-white);
   background-color: var(--bg-color);
 
-  &.hidden {
-    overflow-y: hidden;
-  }
+  // &.hidden {
+  overflow-y: hidden;
+  // }
 
   &::-webkit-scrollbar {
     width: 0;
