--- a/components/Wrapper/Wrapper.module.scss
+++ b/components/Wrapper/Wrapper.module.scss
@@ -2,19 +2,10 @@
   position: relative;
   margin: 0 auto;
   padding-top: 25px;
-  // max-width: 390px;
+  max-width: 390px;
   // width: 100%;
   height: inherit;
   background-color: var(--bg-color);
-
-  .content {
-    overflow-y: scroll;
-  }
-
-  .noScroll {
-    position: relative;
-    overflow-y: hidden;
-  }
 }
 
 .popup {
