--- a/app/profile/page.module.scss
+++ b/app/profile/page.module.scss
@@ -147,10 +147,18 @@
   }
 }
 
+.content {
+  position: relative;
+  margin-top: 30px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 .banner {
   position: relative;
   margin: 0 10px;
-  margin-top: 30px;
   padding: 30px 15px 20px 15px;
   color: var(--color-white);
 
@@ -201,7 +209,6 @@
 
 .tasks {
   margin: 0 10px;
-  margin-top: 20px;
   padding: 30px 15px;
   border-radius: 20px;
   background-color: var(--color-white);
@@ -261,7 +268,6 @@
 .friends {
   margin: 0 10px;
   margin-bottom: 120px;
-  margin-top: 20px;
   padding: 30px 15px;
   border-radius: 20px;
   background-color: var(--color-white);
