--- a/app/operations/page.module.scss
+++ b/app/operations/page.module.scss
@@ -63,23 +63,31 @@
   }
 
   .list {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
     margin-top: 10px;
     background-color: var(--color-white);
     padding: 15px;
     border-radius: 20px;
 
     .item {
+      position: relative;
       display: flex;
       justify-content: space-between;
       align-items: center;
 
-      &:not(:first-of-type) {
-        padding-top: 15px;
-      }
-
       &:not(:last-of-type) {
-        border-bottom: 1px solid var(--bg-color);
-        padding-bottom: 15px;
+        &::before {
+          position: absolute;
+          content: '';
+          bottom: -15px;
+          left: 0;
+          right: 0;
+          height: 1px;
+          background-color: var(--bg-color);
+          border-radius: 1px;
+        }
       }
     }
 
