--- a/app/settings/page.module.scss
+++ b/app/settings/page.module.scss
@@ -92,6 +92,7 @@
           right: 0;
           height: 1px;
           background-color: var(--bg-color);
+          border-radius: 1px;
         }
       }
 
