--- a/app/profile/page.module.scss
+++ b/app/profile/page.module.scss
@@ -21,7 +21,7 @@
       border-radius: 40px 0 0 0;
       width: 100%;
       height: 105px;
-      bottom: 0;
+      bottom: -1px;
       left: 0;
       right: 0;
     }
