--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -11,17 +11,46 @@
   padding: 0 10px;
 
   .inner {
+    position: relative;
     width: inherit;
     height: inherit;
-    background: #ffffff;
-    box-shadow: 0px -10px 120px rgba(96, 102, 108, 0.16);
-    border-radius: 20px;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 14px;
 
-    padding: 6px 6px 15px 6px;
+    .bg {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      background-color: var(--color-white);
+
+      border-radius: 20px;
+      mask-image: url('../../public/mask.svg');
+      mask-position: center;
+      mask-repeat: no-repeat;
+      mask-composite: subtract;
+      // box-shadow: 0px -10px 120px rgba(96, 102, 108, 0.16);
+      -webkit-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
+      -moz-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
+      -ms-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
+      -o-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
+    }
+
+    > *:not(.bg) {
+      position: relative;
+    }
+
+    .box {
+      width: 100%;
+      height: 100%;
+      border-radius: 20px;
+      background-color: var(--color-white);
+      padding: 6px 6px 15px 6px;
+    }
 
     .links {
       display: flex;
@@ -56,7 +85,7 @@
 
     .btn {
       position: relative;
-      top: -15px;
+      top: -21px;
       display: flex;
       align-items: center;
       justify-content: center;
