--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -34,10 +34,10 @@
       mask-repeat: no-repeat;
       mask-composite: subtract;
       // box-shadow: 0px -10px 120px rgba(96, 102, 108, 0.16);
-      -webkit-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
-      -moz-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
-      -ms-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
-      -o-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
+      // -webkit-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
+      // -moz-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
+      // -ms-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
+      // -o-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
     }
 
     > *:not(.bg) {
