--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -19,6 +19,12 @@
     justify-content: space-between;
     align-items: center;
     gap: 14px;
+    border-radius: 20px;
+    -webkit-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
+    -moz-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
+    -ms-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
+    -o-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
+    filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
 
     .bg {
       position: absolute;
@@ -34,10 +40,6 @@
       mask-repeat: no-repeat;
       mask-composite: subtract;
       // box-shadow: 0px -10px 120px rgba(96, 102, 108, 0.16);
-      // -webkit-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
-      // -moz-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
-      // -ms-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
-      // -o-filter: drop-shadow(0px -10px 120px rgba(96, 102, 108, 0.16));
     }
 
     > *:not(.bg) {
