--- a/app/operations/page.module.scss
+++ b/app/operations/page.module.scss
@@ -70,6 +70,7 @@
     background-color: var(--color-white);
     padding: 15px;
     border-radius: 20px;
+    box-shadow: 0px 12px 120px rgba(132, 139, 147, 0.12);
 
     .item {
       position: relative;
