--- a/app/profile/page.module.scss
+++ b/app/profile/page.module.scss
@@ -212,6 +212,7 @@
   padding: 30px 15px;
   border-radius: 20px;
   background-color: var(--color-white);
+  box-shadow: 0px 12px 120px rgba(132, 139, 147, 0.12);
 
   .top {
     display: flex;
@@ -271,6 +272,7 @@
   padding: 30px 15px;
   border-radius: 20px;
   background-color: var(--color-white);
+  box-shadow: 0px 12px 120px rgba(132, 139, 147, 0.12);
 
   .top {
     display: flex;
