--- a/app/settings/page.module.scss
+++ b/app/settings/page.module.scss
@@ -76,6 +76,7 @@
     background-color: var(--color-white);
     border-radius: 20px;
     padding: 15px;
+    box-shadow: 0px 12px 120px rgba(132, 139, 147, 0.12);
 
     .item {
       position: relative;
