--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -410,6 +410,10 @@
         position: absolute;
         height: 100%;
         bottom: 0;
+        left: 0;
+        right: 0;
+        width: max-content;
+        margin: auto;
         display: flex;
         align-items: flex-end;
         gap: 12px;
