--- a/components/Wrapper/Wrapper.module.scss
+++ b/components/Wrapper/Wrapper.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   margin: 0 auto;
   padding-top: 25px;
-  // max-width: 390px;
+  max-width: 390px;
   // width: 100%;
   height: inherit;
   background-color: var(--bg-color);
@@ -240,6 +240,7 @@
 
   .btn {
     margin-top: 10px;
+    margin-bottom: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
