--- a/app/globals.scss
+++ b/app/globals.scss
@@ -12,6 +12,8 @@
   --color-bledny-orange: #ffeee4;
   --color-red: #ea2124;
   --color-bledny-red: #ffe7e8;
+
+  --spacing-bottom: 116px;
 }
 
 * {
