--- a/app/operations/page.module.scss
+++ b/app/operations/page.module.scss
@@ -30,7 +30,7 @@
   flex-direction: column;
   gap: 20px;
   padding: 0 10px;
-  padding-bottom: 120px;
+  padding-bottom: var(--spacing-bottom);
 
   .head {
     display: flex;
