--- a/app/operations/page.module.scss
+++ b/app/operations/page.module.scss
@@ -78,7 +78,7 @@
       justify-content: space-between;
       align-items: center;
 
-      &:not(:last-of-type) {
+      &:not(:first-of-type) {
         &::before {
           position: absolute;
           content: '';
