--- a/app/operations/page.module.scss
+++ b/app/operations/page.module.scss
@@ -104,7 +104,7 @@
 
       .icon {
         display: inline-block;
-        background-color: #e23235;
+        background-color: var(--bg-color);
         padding: 15px;
         border-radius: 15px;
       }
