--- a/app/globals.scss
+++ b/app/globals.scss
@@ -50,6 +50,8 @@ html {
     --color-bledny-blue: #00254d;
     --color-bledny-orange: #4d2800;
     --color-bledny-red: #460a0b;
+    --color-bledny-grey: #7a7a87;
+    --color-bledny-green: #103d1b;
   }
 }
 
