--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -116,6 +116,10 @@
   }
 
   .card {
+    --color-white: #ffffff;
+    --color-bledny-blue: #dae7fa;
+    --color-bledny-orange: #ffeee4;
+
     position: relative;
     display: block;
     width: 230px;
