--- a/entities/Tag/Tag.module.scss
+++ b/entities/Tag/Tag.module.scss
@@ -1,5 +1,7 @@
 .tag {
+  --color-white: #ffffff;
   display: inline-block;
+  color: var(--color-white);
   border-radius: 20px;
   padding: 8px;
   font-size: 1rem;
